improvements for select component

--- a/projects/ngx-relic/src/assets/scss/base/_typography.scss
+++ b/projects/ngx-relic/src/assets/scss/base/_typography.scss
@@ -100,3 +100,11 @@ h1 {
     color: map-get($colors, "color-neutral-500");
   }
 }
+
+.helper-text {
+  font-size: $text-xs;
+
+  &--error {
+    color: map-get($colors, "color-danger-600");
+  }
+}
