--- a/projects/ngx-relic/src/lib/display/button/button.component.html
+++ b/projects/ngx-relic/src/lib/display/button/button.component.html
@@ -1,4 +1,4 @@
-<button class="ngx-button ngx-button--primary p-1">
+<button [disabled]="disabled" [ngClass]="baseClass" class="ngx-button p-1">
   <em *ngIf="icon" class="material-icons">{{ icon }}</em>
   <div class="ngx-button__wrapper">
     <ng-content></ng-content>
