--- a/projects/ngx-relic/src/assets/scss/utils/_variables.scss
+++ b/projects/ngx-relic/src/assets/scss/utils/_variables.scss
@@ -83,7 +83,7 @@ $colors: (
   "color-primary-900": #081125
 );
 
-$variations: "primary", "info", "warning", "success", "danger";
+$variations: "primary", "neutral", "info", "warning", "success", "danger";
 $spacing-values: 0, 1, 2, 3, 4, 5, 6;
 $rounded-values: "xs", "md", "lg", "full";
 $default-size: 0.25;
