--- a/projects/ngx-relic/src/lib/forms/select/select.component.html
+++ b/projects/ngx-relic/src/lib/forms/select/select.component.html
@@ -1,20 +1,26 @@
-<div class="ngx-select" id="element">
-  <label>{{ label }}</label>
-  <div class="ngx-select__inner">
+<div class="ngx-base-input ngx-select" id="element">
+  <ngx-label [disabled]="disabled" [required]="required">{{ label }}</ngx-label>
+  <div
+    [ngClass]="{
+      'ngx-base-input__inner--error': hasErrors && !disabled,
+      'ngx-base-input__inner--disabled': disabled
+    }"
+    class="ngx-base-input__inner"
+  >
     <div
       class="ngx-select__tags-container"
       [ngClass]="{ 'px-1': showSelectedOptions.length > 0 }"
     >
       <ngx-tag
         (closeClick)="removeItem(option)"
-        [close]="true"
+        [close]="!disabled"
+        [state]="disabled ? 'neutral' : 'primary'"
         [outline]="true"
         state="primary"
-        class="text-white mr-1"
         *ngFor="let option of showSelectedOptions"
         >{{ option[labelKey] }}</ngx-tag
       >
-      <ngx-tag *ngIf="selectedOptions.length - showMax > 0"
+      <ngx-tag *ngIf="selectedOptions.length - showMax > 0" class="ml-1"
         >+ {{ selectedOptions.length - showMax }}</ngx-tag
       >
     </div>
@@ -26,27 +32,29 @@
     <ngx-button
       (click)="openSelect()"
       class="ngx-select__expand"
+      [disabled]="disabled"
+      [color]="hasErrors ? 'danger' : 'primary'"
       [icon]="isOpen ? 'expand_less' : 'expand_more'"
     />
-  </div>
-  <div #optionsContainer class="ngx-select__options-container" *ngIf="isOpen">
-    <div
-      class="ngx-select__option p-1"
-      [ngClass]="{ 'ngx-select__option--selected': option.selected }"
-      [ngStyle]="{ width: optionsContainer.offsetWidth }"
-      *ngFor="let option of internalOptions; let i = index"
-      (click)="multiple ? onMultipleClick(option, i) : onSingleClick(option, i)"
-    >
-      <em
-        *ngIf="multiple"
-        class="material-icons-outlined ngx-select__checkbox mr-1"
-        [ngClass]="{ 'ngx-select__option--selected': option.selected }"
-        >{{
-          option.selected ? "check_box_outline" : "check_box_outline_blank"
-        }}</em
-      >
 
-      <span>{{ option[labelKey] }}</span>
+    <div #optionsContainer class="ngx-select__options-container" *ngIf="isOpen">
+      <ngx-select-item
+        [selected]="option.selected"
+        [multiple]="multiple"
+        [ngStyle]="{ width: optionsContainer.offsetWidth }"
+        *ngFor="let option of internalOptions; let i = index"
+        (click)="
+          multiple ? onMultipleClick(option, i) : onSingleClick(option, i)
+        "
+      >
+        {{ option[labelKey] }}
+      </ngx-select-item>
     </div>
   </div>
+  <span *ngIf="hasErrors && !disabled" class="helper-text helper-text--error">{{
+    errorText
+  }}</span>
+  <span *ngIf="helperText !== '' && !hasErrors" class="helper-text">{{
+    helperText
+  }}</span>
 </div>
