--- a/projects/ngx-relic/src/lib/forms/select/select.component.scss
+++ b/projects/ngx-relic/src/lib/forms/select/select.component.scss
@@ -5,29 +5,6 @@
 }
 
 .ngx-select {
-  position: relative;
-  min-width: 300px;
-
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid transparent;
-    border-top: 1px solid map-get($colors, "color-primary-900");
-    border-bottom: 1px solid map-get($colors, "color-primary-900");
-    transition: border-top 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-
-    &:hover {
-      border-bottom: 1px solid map-get($colors, "color-primary-500");
-      border-top: 1px solid map-get($colors, "color-primary-500");
-      background-color: map-get($colors, "color-slate-100");
-    }
-  }
-
-  &__tags-container {
-    display: flex;
-    align-items: center;
-  }
-
   &__options-container {
     position: absolute;
     display: flex;
@@ -38,22 +15,7 @@
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     left: 0;
     right: 0;
-  }
-
-  &__option {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid map-get($colors, "color-neutral-700");
-
-    &:hover {
-      background-color: map-get($colors, "color-neutral-200");
-    }
-
-    &--selected {
-      color: map-get($colors, "color-primary-500");
-      background-color: map-get($colors, "color-primary-100");
-    }
+    top: 43px;
   }
 
   &__placeholder {
@@ -61,13 +23,13 @@
     align-self: center;
   }
 
+  &__tags-container {
+    display: flex;
+    align-items: center;
+  }
+
   &__expand {
     cursor: pointer;
     color: map-get($colors, "color-primary-900");
-  }
-
-  &__checkbox {
-    cursor: pointer;
-    width: 20px;
   }
 }
