--- a/projects/ngx-relic/src/lib/display/button/button.component.scss
+++ b/projects/ngx-relic/src/lib/display/button/button.component.scss
@@ -14,7 +14,7 @@ $color-variations: "primary", "success", "danger";
   display: flex;
   align-items: center;
 
-  &__wrapper:not(:empty) {
+  .material-icons + &__wrapper:not(:empty) {
     margin-left: 6px;
   }
 
@@ -26,26 +26,64 @@ $color-variations: "primary", "success", "danger";
   }
 
   @each $color-variation in $color-variations {
+    $bg-color: map-get($colors, "color-" + $color-variation + "-500");
     &--default-#{$color-variation} {
-      background-color: map-get($colors, "color-" + $color-variation + "-500");
+      background-color: $bg-color;
       border: 1px solid map-get($colors, "color-" + $color-variation + "-800");
       color: map-get($colors, "color-neutral-100");
-      transition: all 0.2s ease-in;
+      transition: all 0.6s cubic-bezier(0.05, 0.93, 0.78, 0.24);
+      position: relative;
+      overflow: hidden;
+
+      &::before {
+        content: "";
+        position: absolute;
+        margin: 0 auto;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 6%;
+        width: 100%;
+        background-color: transparent;
+        transform: translate(-100%);
+        transition: all 0.15s cubic-bezier(0, 0.64, 1, 0.07);
+      }
 
       &:not(:disabled):hover {
-        border: 1px solid map-get($colors, "color-primary-500");
+        border: 1px solid map-get($colors, "color-primary-400");
         background: linear-gradient(
-          180deg,
-          rgba(map-get($colors, "color-" + $color-variation + "-400"), 1) 0%,
-          rgba(map-get($colors, "color-" + $color-variation + "-500"), 1) 100%
+          120deg,
+          rgba(map-get($colors, "color-" + $color-variation + "-300"), 1) 0%,
+          rgba(map-get($colors, "color-" + $color-variation + "-400"), 1) 60%
         );
+        backdrop-filter: blur(30px);
+
+        &::before {
+          background-color: $bg-color;
+          transform: translate(0%);
+          opacity: 0.3;
+          height: 2px;
+        }
       }
     }
 
     &--outline-#{$color-variation} {
       background-color: map-get($colors, "color-neutral-50");
-      border: 1px solid map-get($colors, "color-" + $color-variation + "-500");
-      color: map-get($colors, "color-" + $color-variation + "-500");
+      border: 1px solid $bg-color;
+      color: $bg-color;
+      transition: all 0.15s cubic-bezier(0, 0.64, 1, 0.07);
+
+      &:not(:disabled):hover {
+        border: 1px
+          solid
+          map-get($colors, "color-" + $color-variation + "-200");
+        background: linear-gradient(
+          120deg,
+          rgba(map-get($colors, "color-" + $color-variation + "-100"), 1) 0%,
+          rgba(map-get($colors, "color-" + $color-variation + "-200"), 1) 100%
+        );
+        backdrop-filter: blur(30px);
+      }
     }
   }
 }
