componente tooltip con input para posicionamiento

--- a/projects/relic-test/src/app/app.component.html
+++ b/projects/relic-test/src/app/app.component.html
@@ -116,3 +116,15 @@
   <p class="text--sm">ABCD</p>
   <p class="text--xs">ABCD</p>
 </div>
+
+<div style="display: flex; justify-content: center">
+  <ngx-tooltip>
+    <p content class="text--sm">ABCDABCDABCDABCDABCDABCDABCDABCDABCDABCDABCD</p>
+    <span>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+      molestiae facere libero itaque explicabo reiciendis porro, omnis,
+      distinctio quasi impedit aperiam autem dicta in quae excepturi neque
+      praesentium fuga. Asperiores?
+    </span>
+  </ngx-tooltip>
+</div>
