--- a/projects/relic-test/src/app/app.component.html
+++ b/projects/relic-test/src/app/app.component.html
@@ -84,6 +84,7 @@
       formControlName="input"
       label="Permiso"
       placeholder="Selecciona el permiso"
+      errorText="Campo requerido"
       type="text"
     />
   </form>
