se reemplaza estilo por una clase

--- a/projects/ngx-relic/src/lib/forms/select/select.component.html
+++ b/projects/ngx-relic/src/lib/forms/select/select.component.html
@@ -42,7 +42,7 @@
         itemSize="4"
         minBufferPx="168"
         maxBufferPx="400"
-        style="min-height: 168px"
+        class="ngx-select__scroll"
       >
         <ngx-select-item
           *cdkVirtualFor="let option of internalOptions; let i = index"
