--- a/projects/ngx-relic/src/lib/forms/select/select.component.scss
+++ b/projects/ngx-relic/src/lib/forms/select/select.component.scss
@@ -12,7 +12,9 @@
     overflow-x: hidden;
     background-color: map-get($colors, "color-neutral-50");
     z-index: 200;
-    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    box-shadow:
+      0 4px 6px -1px rgb(0 0 0 / 0.1),
+      0 2px 4px -2px rgb(0 0 0 / 0.1);
     left: 0;
     right: 0;
     top: 43px;
@@ -26,6 +28,10 @@
   &__tags-container {
     display: flex;
     align-items: center;
+  }
+
+  &__scroll {
+    min-height: 168px;
   }
 
   &__expand {
