--- a/projects/ngx-relic/src/assets/scss/components/_base-input.scss
+++ b/projects/ngx-relic/src/assets/scss/components/_base-input.scss
@@ -6,26 +6,48 @@
     justify-content: space-between;
     position: relative;
     border-top: 1px solid transparent;
-    border-top: 1px solid map-get($colors, "color-primary-900");
-    border-bottom: 1px solid map-get($colors, "color-primary-900");
+    border-top: 1px solid var(--color-primary-900);
+    border-bottom: 1px solid var(--color-primary-900);
     transition: border-top 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--color-slate-600);
+      border-top: 1px solid var(--color-slate-100);
+      border-bottom: 1px solid var(--color-slate-100);
+    }
+
     &:not(&--disabled):hover {
-      border-bottom: 1px solid map-get($colors, "color-primary-500");
-      border-top: 1px solid map-get($colors, "color-primary-500");
-      background-color: map-get($colors, "color-slate-100");
+      border-bottom: 1px solid var(--color-primary-600);
+      border-top: 1px solid var(--color-primary-600);
+      background-color: var(--color-primary-200);
+
+      @media (prefers-color-scheme: dark) {
+        border-bottom: 1px solid var(--color-primary-300);
+        border-top: 1px solid var(--color-primary-300);
+        background-color: var(--color-primary-700);
+      }
     }
 
     &--error {
-      border-bottom: 1px solid map-get($colors, "color-danger-500");
-      border-top: 1px solid map-get($colors, "color-danger-500");
-      background-color: map-get($colors, "color-danger-100");
+      border-bottom: 1px solid var(--color-danger-500);
+      border-top: 1px solid var(--color-danger-500);
+      background-color: var(--color-danger-100);
+
+      @media (prefers-color-scheme: dark) {
+        border-bottom: 1px solid var(--color-danger-300);
+        border-top: 1px solid var(--color-danger-300);
+        background-color: var(--color-danger-600);
+      }
     }
 
     &--disabled {
-      border-bottom: 1px solid map-get($colors, "color-neutral-500");
-      border-top: 1px solid map-get($colors, "color-neutral-500");
-      background-color: map-get($colors, "color-neutral-100");
+      border-bottom: 1px solid var(--color-neutral-500);
+      border-top: 1px solid var(--color-neutral-500);
+      background-color: var(--color-neutral-300);
+
+      @media (prefers-color-scheme: dark) {
+        background-color: var(--color-slate-800);
+      }
     }
   }
 }
