--- a/projects/ngx-relic/src/assets/scss/utils/_mixins.scss
+++ b/projects/ngx-relic/src/assets/scss/utils/_mixins.scss
@@ -4,3 +4,25 @@
   font-size: $font-size;
   line-height: $line-height;
 }
+
+@mixin apply-theme($color-map) {
+  @each $color-name, $color-value in $color-map {
+    --#{$color-name}: #{$color-value};
+  }
+}
+
+@mixin bg-gradient-1($color1, $color2) {
+  background-image: linear-gradient(
+    45deg,
+    rgba($color1, 0.8) 0%,
+    rgba($color2, 1) 60%
+  );
+}
+
+@mixin bg-gradient-2($color1, $color2) {
+  background: linear-gradient(
+    120deg,
+    rgba($variation-low, 1) 0%,
+    rgba(map-get($colors, "color-" + $color-variation + "-200"), 1) 100%
+  );
+}
