--- a/projects/ngx-relic/src/lib/display/button/button.component.scss
+++ b/projects/ngx-relic/src/lib/display/button/button.component.scss
@@ -1,5 +1,3 @@
-@import "../.././../assets/scss/utils/variables";
-
 $color-variations: "primary", "success", "danger";
 
 :host {
@@ -19,18 +17,23 @@ $color-variations: "primary", "success", "danger";
   }
 
   &:disabled {
-    background-color: map-get($colors, "color-neutral-300");
+    background-color: var(--color-neutral-300);
     border: 1px solid transparent;
     pointer-events: none;
     cursor: default;
+
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--color-neutral-700);
+    }
   }
 
   @each $color-variation in $color-variations {
-    $bg-color: map-get($colors, "color-" + $color-variation + "-500");
+    $bg-color: var(--color-#{$color-variation}-#{500});
+
     &--default-#{$color-variation} {
       background-color: $bg-color;
-      border: 1px solid map-get($colors, "color-" + $color-variation + "-800");
-      color: map-get($colors, "color-neutral-100");
+      border: 1px solid var(--color-#{$color-variation}-800);
+      color: var(--color-neutral-50);
       transition: all 0.6s cubic-bezier(0.05, 0.93, 0.78, 0.24);
       position: relative;
       overflow: hidden;
@@ -50,11 +53,11 @@ $color-variations: "primary", "success", "danger";
       }
 
       &:not(:disabled):hover {
-        border: 1px solid map-get($colors, "color-primary-400");
+        border: 1px solid var(--color-#{$color-variation}-300);
         background: linear-gradient(
           120deg,
-          rgba(map-get($colors, "color-" + $color-variation + "-300"), 1) 0%,
-          rgba(map-get($colors, "color-" + $color-variation + "-400"), 1) 60%
+          var(--color-#{$color-variation}-200) 0%,
+          var(--color-#{$color-variation}-300) 60%
         );
         backdrop-filter: blur(30px);
 
@@ -68,21 +71,33 @@ $color-variations: "primary", "success", "danger";
     }
 
     &--outline-#{$color-variation} {
-      background-color: map-get($colors, "color-neutral-50");
+      background-color: var(--color-neutral-50);
       border: 1px solid $bg-color;
       color: $bg-color;
       transition: all 0.15s cubic-bezier(0, 0.64, 1, 0.07);
 
+      @media (prefers-color-scheme: dark) {
+        color: var(--color-#{$color-variation}-#{200});
+        background-color: var(--color-neutral-900);
+      }
+
       &:not(:disabled):hover {
-        border: 1px
-          solid
-          map-get($colors, "color-" + $color-variation + "-200");
+        border: 1px solid var(--color-#{$color-variation}-200);
+        backdrop-filter: blur(30px);
         background: linear-gradient(
           120deg,
-          rgba(map-get($colors, "color-" + $color-variation + "-100"), 1) 0%,
-          rgba(map-get($colors, "color-" + $color-variation + "-200"), 1) 100%
+          var(--color-#{$color-variation}-50) 0%,
+          var(--color-#{$color-variation}-100) 100%
         );
-        backdrop-filter: blur(30px);
+
+        @media (prefers-color-scheme: dark) {
+          color: var(--color-#{$color-variation}-#{800});
+          background: linear-gradient(
+            120deg,
+            var(--color-#{$color-variation}-300) 0%,
+            var(--color-#{$color-variation}-400) 100%
+          );
+        }
       }
     }
   }
