--- a/projects/ngx-relic/src/lib/display/label/label.component.scss
+++ b/projects/ngx-relic/src/lib/display/label/label.component.scss
@@ -1,4 +1,3 @@
-@import "../.././../assets/scss/utils/variables";
 @import "../../../assets/scss/base/typography";
 
 :host {
@@ -8,14 +7,27 @@
 .ngx-label {
   display: flex;
   align-items: center;
+  color: var(--color-slate-700);
+
+  @media (prefers-color-scheme: dark) {
+    color: var(--color-slate-100);
+  }
 
   &__required {
     font-size: $text-sm;
     margin-left: 2px;
-    color: map-get($colors, "color-danger-700");
+    color: var(--color-danger-700);
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-danger-500);
+    }
   }
 
   &--disabled {
-    color: map-get($colors, "color-neutral-400");
+    color: var(--color-neutral-400);
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-neutral-600);
+    }
   }
 }
