--- a/projects/ngx-relic/src/lib/display/tooltip/tooltip.component.scss
+++ b/projects/ngx-relic/src/lib/display/tooltip/tooltip.component.scss
@@ -1,5 +1,3 @@
-@import "../.././../assets/scss/utils/variables";
-
 :host {
   display: inline-block;
 }
@@ -17,8 +15,8 @@
 
   &__content {
     position: absolute;
-    background-color: map-get($colors, "color-neutral-700");
-    color: map-get($colors, "color-slate-50");
+    background-color: var(--color-neutral-700);
+    color: var(--color-slate-50);
     border-radius: 6px;
 
     &--top {
