--- a/projects/ngx-relic/src/lib/forms/input/input.component.scss
+++ b/projects/ngx-relic/src/lib/forms/input/input.component.scss
@@ -11,4 +11,10 @@ input {
   &:focus-visible {
     outline: 0px;
   }
+
+  &::placeholder {
+    @media (prefers-color-scheme: dark) {
+      color: var(--color-slate-50);
+    }
+  }
 }
