--- a/projects/ngx-relic/src/lib/forms/select/select.component.scss
+++ b/projects/ngx-relic/src/lib/forms/select/select.component.scss
@@ -1,5 +1,3 @@
-@import "../.././../assets/scss/utils/variables";
-
 :host {
   display: inline-block;
 }
@@ -10,7 +8,7 @@
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-    background-color: map-get($colors, "color-neutral-50");
+    background-color: var(--color-neutral-50);
     z-index: 200;
     box-shadow:
       0 4px 6px -1px rgb(0 0 0 / 0.1),
@@ -36,6 +34,6 @@
 
   &__expand {
     cursor: pointer;
-    color: map-get($colors, "color-primary-900");
+    color: var(--color-primary-900);
   }
 }
