se agrega soporte para colores custom, se agrega soporte para temas oscuros y claros

--- a/projects/ngx-relic/src/assets/scss/base/_typography.scss
+++ b/projects/ngx-relic/src/assets/scss/base/_typography.scss
@@ -99,14 +99,18 @@ h1 {
   &--xs {
     font-size: $text-xs;
   }
+}
 
-  &--placeholder {
-    font-size: $text-sm;
-    color: var(--color-neutral-500);
+.placeholder {
+  font-size: $text-sm;
+  color: var(--color-slate-600);
 
-    @media (prefers-color-scheme: dark) {
-      color: var(--color-slate-50);
-    }
+  @media (prefers-color-scheme: dark) {
+    color: var(--color-slate-50);
+  }
+
+  &--disabled {
+    color: var(--color-slate-400);
   }
 }
 
