--- a/projects/relic-test/src/app/app.component.html
+++ b/projects/relic-test/src/app/app.component.html
@@ -86,6 +86,7 @@
       placeholder="Selecciona el permiso"
       errorText="Campo requerido"
       type="text"
+      class="ml-2"
     />
   </form>
 
