--- a/projects/ngx-relic/src/assets/scss/components/_base-input.scss
+++ b/projects/ngx-relic/src/assets/scss/components/_base-input.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     position: relative;
-    border-top: 1px solid transparent;
+    height: 40px;
     border-top: 1px solid var(--color-primary-900);
     border-bottom: 1px solid var(--color-primary-900);
     transition: border-top 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
