--- a/projects/ngx-relic/src/lib/forms/input/input.component.scss
+++ b/projects/ngx-relic/src/lib/forms/input/input.component.scss
@@ -1,10 +1,12 @@
+@import "../../../assets/scss/base/typography";
+
 :host {
   display: inline-block;
 }
 
 input {
   width: 100%;
-  height: 44px;
+
   background: transparent;
   border: none;
 
@@ -13,8 +15,16 @@ input {
   }
 
   &::placeholder {
+    opacity: 1 !important;
+    font-size: $text-sm;
+    color: var(--color-slate-600);
     @media (prefers-color-scheme: dark) {
       color: var(--color-slate-50);
     }
+  }
+
+  &:disabled::placeholder {
+    font-size: $text-sm;
+    color: var(--color-slate-400);
   }
 }
