--- a/projects/relic-test/src/app/app.component.html
+++ b/projects/relic-test/src/app/app.component.html
@@ -102,6 +102,14 @@
     {{ input }}
   </div>
 
+  <div class="mt-5">
+    <ngx-datepicker
+      label="Fecha"
+      placeholder="Ingresa una fecha"
+      [required]="true"
+    />
+  </div>
+
   <div class="mt-2">
     <ngx-button class="mr-2" (click)="enable()">Habilitar </ngx-button>
     <ngx-button (click)="disable()"> Deshabilitar</ngx-button>
