--- a/projects/relic-test/src/app/app.component.html
+++ b/projects/relic-test/src/app/app.component.html
@@ -66,7 +66,7 @@
 </div>
 
 <div class="mt-5">
-  <form [formGroup]="form">
+  <form [formGroup]="form" style="display: flex">
     <ngx-select
       [required]="true"
       [options]="options"
@@ -88,6 +88,14 @@
       type="text"
       class="ml-2"
     />
+
+    <ngx-datepicker
+      label="Fecha"
+      placeholder="Ingresa una fecha"
+      formControlName="date"
+      [required]="true"
+      class="ml-2"
+    />
   </form>
 
   <div class="mt-5">
@@ -106,8 +114,11 @@
     <ngx-datepicker
       label="Fecha"
       placeholder="Ingresa una fecha"
+      [(ngModel)]="date"
       [required]="true"
     />
+
+    {{ date }}
   </div>
 
   <div class="mt-2">
