se eliminan las tipogradias de la carpeta assets, optimizaciones de scss

--- a/projects/ngx-relic/src/assets/scss/_main.scss
+++ b/projects/ngx-relic/src/assets/scss/_main.scss
@@ -1,4 +1,4 @@
-@import "./base/main";
-@import "./vendors/main";
-@import "./utils/main";
-@import "./components/main";
+@forward "./base/main";
+@forward "./vendors/main";
+@forward "./utils/main";
+@forward "./components/main";
