--- a/projects/relic-test/src/app/app.component.html
+++ b/projects/relic-test/src/app/app.component.html
@@ -98,7 +98,7 @@
     />
   </form>
 
-  <div class="mt-5">
+  <!-- <div class="mt-5">
     <ngx-input
       [required]="true"
       [(ngModel)]="input"
@@ -108,9 +108,9 @@
     />
 
     {{ input }}
-  </div>
+  </div> -->
 
-  <div class="mt-5">
+  <!-- <div class="mt-5">
     <ngx-datepicker
       label="Fecha"
       placeholder="Ingresa una fecha"
@@ -119,7 +119,7 @@
     />
 
     {{ date }}
-  </div>
+  </div> -->
 
   <div class="mt-2">
     <ngx-button class="mr-2" (click)="enable()">Habilitar </ngx-button>
