componentes tabla y paginacion, necesita mejoras de estilos

--- a/projects/ngx-relic/src/assets/scss/utils/_helpers.scss
+++ b/projects/ngx-relic/src/assets/scss/utils/_helpers.scss
@@ -46,6 +46,10 @@
   .px-#{$spacing-value} {
     padding: 0 ($default-size * $i) + rem !important;
   }
+
+  .py-#{$spacing-value} {
+    padding: ($default-size * $i) + rem 0 !important;
+  }
 }
 
 @each $rounded-value in $rounded-values {
