--- a/projects/ngx-relic/src/lib/pagination/pagination.component.scss
+++ b/projects/ngx-relic/src/lib/pagination/pagination.component.scss
@@ -1,7 +1,7 @@
 .ngx-pagination {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-end;
   background-color: transparent;
   border-top: 1px solid var(--color-primary-700);
   border-bottom: 1px solid var(--color-slate-600);
