--- a/projects/ngx-relic/src/lib/table/table.component.html
+++ b/projects/ngx-relic/src/lib/table/table.component.html
@@ -16,7 +16,7 @@
         <td
           *ngFor="let property of headers"
           class="border border-y-stone-300 border-x-0 p-3"
-          [ngStyle]="rowStyles(property)"
+          [ngStyle]="cellStyles(property)"
         >
           <ng-container
             [ngTemplateOutlet]="findRow(property) || defaultRow"
@@ -26,12 +26,14 @@
       </tr>
     </tbody>
   </table>
-  <ngx-pagination
-    [currentPage]="currentPage"
-    [limit]="limit"
-    [total]="total"
-    (pageChange)="changePage($event)"
-  ></ngx-pagination>
+  @if (paginator) {
+    <ngx-pagination
+      [currentPage]="currentPage"
+      [limit]="limit"
+      [total]="total"
+      (pageChange)="changePage($event)"
+    ></ngx-pagination>
+  }
 </div>
 
 <ng-template #defaultRow let-row let-property="property">
